# Investment-Analyst

./: README.md  analyst_planner.py  email_agent.py  finance_manager.py  finance_searcher.py  main.py  pyproject.toml  report_writer.py
